# py-type-guard

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_type_guard/: __init__.py
tests/: test_type_guard.py
