[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-type-guard"
version = "0.1.0"
description = "Runtime type checking decorators for function arguments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["type", "guard", "validation", "runtime", "typing", "decorator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-type-guard"
Repository = "https://github.com/philiprehberger/py-type-guard"
Issues = "https://github.com/philiprehberger/py-type-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_type_guard"]
